--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- ===== CSS ===== -->
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="dist/output.css">
 
     <!-- ===== BOX ICONS ===== -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <!-- animation -->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <!-- Tailwind -->
-    <script src="https://cdn.tailwindcss.com"></script>
 
     <title>Personal portfolio | Hanh Tran</title>
 </head>
@@ -322,7 +320,7 @@
 
                 <div class="works__img mx-2">
                     <div class="work-item">
-                        <video class="video-bg" autoplay loop playsinline poster="/assets/img/pj0capture.JPG"
+                        <video class="video-bg" autoplay loop playsinline poster="./assets/img/pj0capture.JPG"
                             preload="auto" muted>
                             <source src="./assets/vid/studious_Thumb.mp4" type="video/mp4">
                         </video>
@@ -337,7 +335,7 @@
 
                 <div class="works__img mx-2">
                     <div class="work-item">
-                        <video class="video-bg" autoplay loop playsinline poster="/assets/img/pj2capture.JPG"
+                        <video class="video-bg" autoplay loop playsinline poster="./assets/img/pj2capture.JPG"
                             preload="auto" muted>
                             <source src="./assets/vid/movieBooking_Thumb.mp4" type="video/mp4">
                         </video>
@@ -352,7 +350,7 @@
 
                 <div class="works__img mx-2">
                     <div class="work-item">
-                        <video class="video-bg" autoplay loop playsinline poster="/assets/img/pj1capture.JPG"
+                        <video class="video-bg" autoplay loop playsinline poster="./assets/img/pj1capture.JPG"
                             preload="auto" muted>
                             <source src="./assets/vid/Jire_Thumb.mp4" type="video/mp4">
                         </video>
@@ -367,7 +365,7 @@
 
                 <div class="works__img mx-2">
                     <div class="work-item">
-                        <video class="video-bg" autoplay loop playsinline poster="/assets/img/pj4capture.JPG"
+                        <video class="video-bg" autoplay loop playsinline poster="./assets/img/pj4capture.JPG"
                             preload="auto" muted>
                             <source src="./assets/vid/CPhone_Thumb.mp4" type="video/mp4">
                         </video>
